@startuml
/' @author @akhilvuputuri'/
/' Got inspiration and adapted
from https://github.com/AY1920S2-CS2103T-W12-1/main/blob/master/docs/images/DeliveredClassDiagram.png '/

skinparam backgroundColor #ffffff
skinparam classAttributeIconSize 0
hide circle


class DeleteCommandParser implements Parser {
    /' Methods '/
    + parse(args : String) : DeleteCommand
}

interface Parser<T extends Command> {
    + parse(userInput : String) : DeleteCommand
}

abstract class Command<E> {
    {abstract} execute(model : E) : CommandResult
}

class DeleteCommand extends Command {
    /' Fields '/
    - COMMAND_WORD : String = "delete"
    - MESSAGE_USAGE : String
    - MESSAGE_DELETE_FOOD_SUCCESS : String
    - MESSAGE_DUPLICATE_FOOD : String


    /' Methods '/
    + execute(dietModel : DietModel) : CommandResult

}

interface DietModel <<Interface>> {
    - PREDICATE_SHOW_ALL_FOODS : Predicate<Food>

    + deleteFood(food : Food) : void
    + getFilteredFoodList() : ObservableList<Food>
}

class Index {
    + getZeroBased()
    + getOneBased()
}

class ParserUtil {
    <u> + parseIndex(oneBasedIndex : String) : Index

}

class DietModelManager implements DietModel {
    /' Fields '/
    - FoodBook : foodBook

    /' Methods '/
    + deleteFood(target : Food) : void
    + isReceiptDone() : boolean
}

class FoodBook {
    /' Fields '/
    - UniqueFoodList : foods

    /' Methods '/
    + removeFood(key : Food) : void
}

DeleteCommandParser ..> DeleteCommand
DeleteCommandParser ..> ParserUtil
DeleteCommand ..> DietModel
DeleteCommandParser ..> Index
DeleteCommand --> Index
DietModelManager *-right->"1" FoodBook

@enduml
